adjust z-index to fix comment-form display

--- a/client/src/SASS/StickyComment.scss
+++ b/client/src/SASS/StickyComment.scss
@@ -81,6 +81,7 @@
 
 main.StickyComment__container.TempComment {
   margin: -47px 0 0 9px;
+  z-index: 99999999;
 }
 
 main.StickyComment__container {
